# Tarea_3_Poo

./: README.txt
Etapa1/: CMakeLists.txt  celular.cpp  celular.h  celularview.cpp  celularview.h  equipo.cpp  equipo.h  mainwindow.cpp  mainwindow.h  territory.cpp  territoryview.cpp  territoryview.h
Etapa2/: CMakeLists.txt  celular.h  celularview.cpp  celularview.h  eloteltag.cpp  eloteltag.h  eloteltagview.cpp  eloteltagview.h  mainwindow.cpp  mainwindow.h  tablet.cpp  tablet.h  tabletview.cpp  tabletview.h  territory.h  territoryview.cpp  territoryview.h
Etapa3/: CMakeLists.txt  celularview.cpp  celularview.h  eloteltag.cpp  eloteltag.h  eloteltagview.cpp  eloteltagview.h  etnube.h  findmydialog.cpp  findmydialog.h  mainwindow.cpp  tabletview.cpp  tabletview.h
Etapa4/: celular.cpp  celularview.cpp  celularview.h  eloteltagview.cpp  equipo.h  etnube.h  findmydialog.h  mainwindow.cpp  tabletview.cpp  tabletview.h  territoryview.cpp
EtapaExtra/: CMakeLists.txt  celularview.cpp  celularview.h  config.txt  eloteltagview.h  equipo.cpp  findmydialog.cpp  gfindmydialog.cpp  gfindmydialog.h  mainwindow.cpp  mainwindow.h  tablet.cpp  tablet.h  tabletview.cpp  tabletview.h  territoryview.h
